improve logic, add toggle, and improve styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-add-todo></app-add-todo>
-<app-todo-list></app-todo-list>
+<div class="app">
+  <h1 class="title">Angular Todo App</h1>
+  <app-add-todo></app-add-todo>
+  <app-todo-list></app-todo-list>
+</div>
