--- a/src/app/components/add-todo/add-todo.component.html
+++ b/src/app/components/add-todo/add-todo.component.html
@@ -1,10 +1,5 @@
-<div>
-    <label for="title">New todo</label>
-    <input
-      id="title"
-      [value]="title"
-      (keyup)="onTitleChange($event)"
-      (keydown.enter)="onCreateTodo()"
-    />
-    <button (click)="onCreateTodo()" [disabled]="title.length < 1">Create</button>
+<div class="container">
+  <label for="title">New todo</label>
+  <input type="text" [(ngModel)]="title" (keydown.enter)="onCreateTodo()" />
+  <button (click)="onCreateTodo()" [disabled]="title.length < 1">Create</button>
 </div>
