--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="todos$ | async as todos">
+<div *ngIf="todos$ | async as todos" class="todo-list">
     <div *ngFor="let todo of todos">
         <app-todo [todo]="todo"></app-todo>
     </div>
-</ng-container>
+</div>
