use mergeMap instead of switchMap, extend UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
   <h1 class="title">Angular Todo App</h1>
   <app-add-todo></app-add-todo>
   <app-todo-list></app-todo-list>
+  <app-todo-counter></app-todo-counter>
+  <app-todo-controls></app-todo-controls>
 </div>
